<resources>
    <string name="app_name">WATCH-UP</string>
    <string name="title_activity_cinema">CinemaActivity</string>


    <string name="title_film">Films</string>
    <string name="title_salle">Salles</string>

    <string name="title_comments">Commentaires</string>
    <string name="no_comments">Aucun commentaire</string>


    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_home">Accueil</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--Menu Labels-->
    <string name="title_home">Accueil</string>
    <string name="title_series">Séries</string>
    <string name="title_cinema">Cinema</string>
    <string name="title_personnes">Personnes</string>
    <string name="title_fan">Fan</string>
    <string name="title_evaluations">Evaluations</string>
    <string name="title_settings">Settings</string>

    <!--Home Activity-->
    <string name="title_new_films">Nouveaux Films</string>
    <string name="title_new_Series">Nouvelles Séries</string>
    <string name="title_activity_personnes">PersonnesActivity</string>
    <string name="actors_title">Acteurs</string>
    <string name="producers_title">Réalisateurs</string>

    <!--Film Detail-->
    <string name="associated_films">Films Associés</string>
    <string name="no_associated_films">Pas des films Associés</string>
    <string name="canals">Salles de Diffusion</string>

    <!--Episode Detail-->
    <string name="serie_canals">Diffusion</string>

    <!--Season Detail-->
    <string name="episodes">Episodes</string>

    <!--Serie Detail-->
    <string name="seasons">Saisons</string>
    Séries Associées
    <string name="associated_series">Séries Associées</string>
    <string name="no_associated_series">Pas des séries Associées</string>
    <!--Cinema Activity-->
    <string name="title_toolbar_cinema">Cinema</string>

    <!--Comment & eval Activity-->
    <string name="title_activity_comment_evaluation">CommentEvaluationActivity</string>
    <string name="title_toolbar_comment_evaluation">Commentaire &amp; Evaluation</string>
    <string name="tab_last">Derniers</string>
    <string name="tab_byFilm">Par films</string>
    <string name="tab_bySeries">Par series</string>
    <string name="filmographie">Filmographie</string>
    <string name="bibliographie">Bibliographie</string>
    <string name="title_activity_series">SeriesActivity</string>

    <!--fan activity-->
    <string name="title_toolbar_fan">Fan</string>
    <string name="my_fav_films">Mes Films</string>
    <string name="my_fav_series">Mes Feuilletons</string>
    <string name="my_fav_salles">Mes Salles</string>


    <string name="baseurl">https://api.themoviedb.org/3/</string>

    <string name="loading_message">Chargement du contenu...</string>
    <string name="failed_title">Chargement Echoué</string>
    <string name="failed_content">Vérifier la connexion internet</string>


</resources>
