<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/title_home" />
        <item
            android:id="@+id/nav_series"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/title_series" />
        <item
            android:id="@+id/nav_cinema"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/title_cinema" />
        <item
            android:id="@+id/nav_personnes"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/title_personnes" />
    </group>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_fan"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/title_fan" />
            <item
                android:id="@+id/nav_evaluations"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/title_evaluations" />
        </menu>
    </item>

</menu>
