<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:context="com.example.tarekbaz.watch_up.FilmDetailActivity">

    <android.support.design.widget.AppBarLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:theme="@style/AppTheme.AppBarOverlay"
        xmlns:android="http://schemas.android.com/apk/res/android">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_detail_film"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:title="@string/title_personnes" />

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:id="@+id/scrollContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/mainLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorBackground"
            android:orientation="vertical">


            <FrameLayout
                android:id="@+id/frameLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:alpha="1"
                android:background="@drawable/film4">

                <LinearLayout
                    android:id="@+id/topLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/DarkFill"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:paddingTop="15dp">

                    <ImageView
                        android:id="@+id/filmCard"
                        android:layout_width="wrap_content"
                        android:layout_height="@android:dimen/thumbnail_height"
                        android:adjustViewBounds="true"
                        android:alpha="1"
                        android:background="@color/colorAccent"
                        android:cropToPadding="false"
                        android:padding="1dp"
                        app:srcCompat="@drawable/film4" />

                    <TextView
                        android:id="@+id/filmTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-smallcaps"
                        android:text="La Belle et La Bète"
                        android:textAlignment="center"
                        android:textColor="#fff"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/filmDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="(2017)"
                        android:textAlignment="center"
                        android:textColor="#fff" />

                    <TextView
                        android:id="@+id/filmType"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:gravity="center"
                        android:text="Fantasy / Family / Musical"
                        android:textAlignment="center"
                        android:textColor="@color/colorAccent" />

                    <LinearLayout
                        android:id="@+id/evaluationFrame"
                        android:layout_width="wrap_content"
                        android:layout_height="33dp"
                        android:layout_marginBottom="5dp"
                        android:layout_marginTop="7dp"
                        android:background="@drawable/frame_yellow"
                        android:orientation="horizontal"
                        android:padding="7dp">

                        <TextView
                            android:id="@+id/evaluationText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="7.9"
                            android:textAlignment="center"
                            android:textColor="@color/colorAccent" />

                        <ImageView
                            android:id="@+id/evaluationStar"
                            android:layout_width="wrap_content"
                            android:layout_height="20dp"
                            android:layout_weight="1"
                            android:adjustViewBounds="true"
                            android:cropToPadding="false"
                            android:padding="3dp"
                            app:srcCompat="@drawable/star" />

                    </LinearLayout>

                </LinearLayout>
            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="10dp">

                <TextView
                    android:id="@+id/descriptionText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lineSpacingExtra="4sp"
                    android:paddingBottom="20dp"
                    android:paddingEnd="20dp"
                    android:paddingStart="20dp"
                    android:paddingTop="10dp"
                    android:text="A drawable resource is a general concept for a graphic that can be drawn to the screen. Drawables are used to define shapes, colors, borders, gradients, etc. which can then be applied to views within an Activity.  This is typically used for customizing the view graphics that are displayed within a particular view or context."
                    android:textAlignment="viewStart"
                    android:textColor="#FFF" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingBottom="10dp"
                    android:paddingStart="15dp">

                    <ImageView
                        android:id="@+id/actorsIcon"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:adjustViewBounds="false"
                        android:rotation="-13"
                        app:srcCompat="@drawable/theatre_masks" />

                    <TextView
                        android:id="@+id/textView67"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="Emma Watson, Luke Evans"
                        android:textColor="#fff"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingBottom="10dp"
                    android:paddingStart="15dp">

                    <ImageView
                        android:id="@+id/producerIcon"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:adjustViewBounds="false"
                        android:cropToPadding="false"
                        android:rotation="0"
                        app:srcCompat="@drawable/film" />

                    <TextView
                        android:id="@+id/producertext"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="Bill CONDON"
                        android:textColor="#fff"
                        android:textSize="15sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <FrameLayout
                    android:id="@+id/trailerFrameLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/activity_horizontal_margin">

                    <com.example.tarekbaz.watch_up.CustomVideoView
                        android:id="@+id/trailerVideo"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_gravity="center"/>

                    <ImageView
                        android:id="@+id/trailerImage"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_gravity="center"
                        android:adjustViewBounds="true"
                        android:src="@drawable/video_preview" />

                </FrameLayout>


                <TextView
                    android:id="@+id/sallesTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:paddingStart="10dp"
                    android:text="@string/canals"
                    android:textAlignment="textStart"
                    android:textColor="@color/colorAccent"
                    android:textSize="19sp"
                    android:textStyle="bold" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/sallesRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="7dp"
                    android:paddingStart="5dp" />

                <TextView
                    android:id="@+id/associatedFilms"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:paddingStart="10dp"
                    android:text="@string/associated_films"
                    android:textAlignment="textStart"
                    android:textColor="@color/colorAccent"
                    android:textSize="19sp"
                    android:textStyle="bold" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/associatedFilmsRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="7dp"
                    android:paddingStart="5dp" />

                <TextView
                    android:id="@+id/commentsTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:paddingStart="10dp"
                    android:text="@string/title_comments"
                    android:textAlignment="textStart"
                    android:textColor="@color/colorAccent"
                    android:textSize="19sp"
                    android:textStyle="bold" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/commentsFilmRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="7dp"
                    android:paddingStart="5dp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</android.support.design.widget.CoordinatorLayout>